fix(app/app.css): make scroll bars more apparent
This patch increases the contrast between the scroll bar color and the
background color to make it more visible. This change was useful when
scrolling through the `/shows` page which is _huge_ and it's always
useful to use the scrollbar to scrub through (if you can find it).

--- a/app/app.css
+++ b/app/app.css
@@ -116,17 +116,17 @@
 @supports (scrollbar-width: thin) {
   * {
     scrollbar-width: thin;
-    scrollbar-color: theme('colors.gray.100') theme('colors.white');
+    scrollbar-color: theme('colors.gray.200') theme('colors.gray.50');
   }
 
   .light,
   .light * {
-    scrollbar-color: theme('colors.gray.100') theme('colors.white');
+    scrollbar-color: theme('colors.gray.200') theme('colors.gray.50');
   }
 
   .dark,
   .dark * {
-    scrollbar-color: theme('colors.gray.800') theme('colors.gray.900');
+    scrollbar-color: theme('colors.gray.700') theme('colors.gray.900');
   }
 }
 
